--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,6 +4,10 @@ body{
     font-optical-sizing: auto;
    
 }
+/* header related styles */
+.header{
+    background: #FFF8F3;
+}
 
 /* nav related styles */
 
@@ -11,6 +15,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px 230px;
 }
 nav ul{
     display: flex;
@@ -39,8 +44,14 @@ font-weight: 700;
 padding: 18px 35px;
 
 }
-.banner-caption{
+.nav-caption{
     color: var(--Dark-01, #181818);
 font-size: 45px;
 font-weight: 800;
+}
+/* banner related styles */
+.banner{
+    display: flex;
+    align-items: center;
+    padding: 0px 38px 0px 230px;
 }
