--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -89,3 +89,52 @@ padding: 131px 157px;
 align-items: center; */
 text-align: center;
 }
+.about-info-container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 130px;
+
+}
+.about-info-container div{
+    margin-right: 50px;
+
+}
+/* what i do section */
+.what-i-do{
+    
+    /* align-items: center;  */
+    text-align: center;
+    /* justify-content: center; */
+    margin: 0px auto;
+    max-width: 1140px;
+
+
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+    margin-top: 20px;
+
+}
+.skills{
+    text-align: left;
+    padding: 30px;
+    border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+/* resume section styles */
+.resume-information{
+    display: flex;
+  text-align: left;
+  gap: 30px;
+  margin-bottom: 30px;
+
+}
+.resume-section{
+    text-align: center;
+    margin: 130px 230px;
+
+}
+
